# nastty

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  FINDINGS.md  Makefile  PROJECT  README.md  flake.nix
.github/workflows/: release.yml
examples/: main.rs
scripts/: btrfs-e2e.sh
src/: auth.rs  client.rs  config.rs  lib.rs  metrics.rs  rest.rs  serve.rs  server.rs  state.rs  ws.rs
src/rpc/: alerts.rs  auth.rs  bcachefs.rs  files.rs  fs.rs  mod.rs  service.rs  share.rs  smb.rs  snapshot.rs  subvolume.rs  system.rs
src/tui/: app.rs  login.rs  mod.rs  theme.rs  ui.rs
