[package]
name = "nastty"
version = "0.1.0"
edition = "2024"
description = "Thin local NAS API server built on the upstream nasty crates"
license = "MIT"
readme = "README.md"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "nasttyd"
path = "src/bin/nasttyd.rs"

[[bin]]
name = "nastty"
path = "src/bin/nastty.rs"

[dependencies]
nasty-common = { git = "https://github.com/bresilla/nasty", branch = "nastty" }
nasty-storage = { git = "https://github.com/bresilla/nasty", branch = "nastty" }
nasty-sharing = { git = "https://github.com/bresilla/nasty", branch = "nastty" }
nasty-snapshot = { git = "https://github.com/bresilla/nasty", branch = "nastty" }
nasty-system = { git = "https://github.com/bresilla/nasty", branch = "nastty" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.10"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }

# TUI client (nastty binary)
ratatui = "0.29"
tui-big-text = "0.7"
tokio-tungstenite = "0.26"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

[dev-dependencies]
